# deskbox

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
src/: main.ts  state.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  desktop.rs  lib.rs  lnk.rs  logger.rs  main.rs  storage.rs  system_icons.rs
src/actions/: blocks.ts  collect.ts  drag-drop.ts  items.ts
src/components/: color-picker.ts  context-menu.ts  modal.ts
src/styles/: main.css
src/views/: block-detail.ts  blocks-view.ts  desktop-view.ts  settings-view.ts
