[package]
name = "deskbox"
version = "0.1.0"
description = "轻量级桌面图标收纳工具"
authors = ["DeskBox"]
edition = "2021"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
debug-assertions = false
debug = false

[lib]
name = "deskbox_lib"
crate-type = ["lib"]
[[bin]]
name = "deskbox"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "custom-protocol"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0", features = [
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry",
] }
base64 = "0.22"
png = "0.17"
